demo/15.K8s.Jenkins.Install/01-namespace-rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ci-cd
  labels:
    istio-injection: enabled
